fully implement beach, stone beach, cold beach, fix generation of extreme hills and variants

--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees_mutated.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills_plus_trees_mutated.yml
@@ -1,5 +1,5 @@
 dict: "nukkitx:vanilla"
-parent: "minecraft:mutated_extreme_hills"
+parent: "minecraft:extreme_hills_mutated"
 
 populators:
   - id: "nukkitx:next"
