--- a/server/src/main/resources/generator/biome/minecraft/frozen_ocean.yml
+++ b/server/src/main/resources/generator/biome/minecraft/frozen_ocean.yml
@@ -7,7 +7,7 @@ rainfall: 0.5
 decorators:
   - id: "nukkitx:next"
 
-    # Ice layer
+    # Ice layer on water
   - id: "nukkitx:replace_top"
     replace: "water"
     with: "ice"
