--- a/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/cold_beach.yml
@@ -5,8 +5,8 @@ elevationVanilla:
   height: 0.0
   variation: 0.025
 
-temperature: 0.8
-rainfall: 0.4
+temperature: 0.05
+rainfall: 0.3
 
 decorators:
   - id: "nukkitx:surface_deep"
@@ -15,6 +15,16 @@ decorators:
     fill: "sand"
     deep: "sandstone"
     deepSize: "1-4"
+
+    # Snow layer on ground
+  - id: "nukkitx:cover"
+    on: "grass"
+    cover: "snow_layer"
+
+    # Ice layer on water
+  - id: "nukkitx:replace_top"
+    replace: "water"
+    with: "ice"
 
 populators:
   - id: "nukkitx:next"
@@ -25,5 +35,5 @@ populators:
     height: "1-3"
     block: "reeds"
     on: "sand"
-    replace: "air"
+    replace: "air,snow_layer"
     water: "water"
