fully implement ice plains, ice plains spikes, ice mountains, fix generation of plains and sunflower plains
also make decorators all be populators as well

--- a/server/src/main/resources/generator/biome/minecraft/ice_plains.yml
+++ b/server/src/main/resources/generator/biome/minecraft/ice_plains.yml
@@ -1,4 +1,5 @@
 dict: "nukkitx:vanilla"
+parent: "minecraft:plains"
 
 elevationVanilla:
   height: 0.125
@@ -7,4 +8,27 @@ elevationVanilla:
 temperature: 0.0
 rainfall: 0.5
 
-#porktodo: this
+decorators:
+  - id: "nukkitx:surface"
+    ground: "stone"
+    top: "grass"
+    fill: "dirt"
+
+    # Tall grass
+  - id: "nukkitx:scattered_cover"
+    chance: 0.05
+    on: "grass"
+    block: "tallgrass"
+
+populators:
+    # Trees
+  - id: "nukkitx:tree"
+    chance: 0.000390625 # about 1 per 10 chunks
+    on: "grass"
+    replace: "air,tallgrass"
+    type: "spruce"
+
+    # Snow
+  - id: "nukkitx:cover"
+    on: "grass,leaves#1"
+    block: "snow_layer"
