fully implement (cold) taiga, (cold) taiga hills, (cold) taiga m

--- a/server/src/main/resources/generator/biome/minecraft/beach.yml
+++ b/server/src/main/resources/generator/biome/minecraft/beach.yml
@@ -25,5 +25,5 @@ populators:
     height: "1-3"
     block: "reeds"
     on: "sand"
-    replace: "air"
+    replace: "air,snow_layer" #allow replacing snow layer as well for cold beach
     water: "water"
