--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills_mutated.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills_mutated.yml
@@ -11,12 +11,12 @@ decorators:
     min: -0.06666666666
     max: 0.13333333333
     in:
-      id: "nukkitx:surface"
-      ground: "stone"
-      top: "grass"
-      fill: "dirt"
+      - id: "nukkitx:surface"
+        ground: "stone"
+        top: "grass"
+        fill: "dirt"
     out:
-      id: "nukkitx:surface"
-      ground: "stone"
-      top: "gravel"
-      fill: "gravel"
+      - id: "nukkitx:surface"
+        ground: "stone"
+        top: "gravel"
+        fill: "gravel"
