--- a/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
+++ b/server/src/main/resources/generator/biome/minecraft/extreme_hills.yml
@@ -14,8 +14,8 @@ decorators:
       id: "nukkitx:simplex"
       scale: 0.0045
       octaves: 4
-    min: -0.06666666666
-    in:
+    threshold: -0.06666666666
+    above:
         # Generate grass surface sometimes
       - id: "nukkitx:surface"
         ground: "stone"
