--- a/server/src/main/resources/generator/biome/minecraft/swampland.yml
+++ b/server/src/main/resources/generator/biome/minecraft/swampland.yml
@@ -7,4 +7,69 @@ elevationVanilla:
 temperature: 0.8
 rainfall: 0.9
 
-#porktodo: this
+decorators:
+  - id: "nukkitx:noise"
+    selector:
+      id: "nukkitx:simplex"
+      scale: 0.25
+      octaves: 1
+    threshold: 0.0
+    above:
+      - id: "nukkitx:replace_top"
+        height: 62
+        replace: "stone" # world is only stone at this phase
+        block: "water"
+
+        # Lily pads
+      - id: "nukkitx:cover" # cover instead of scattered_cover to ensure that they only generate on water that can see the sky
+        chance: 0.12
+        on: "water"
+        block: "waterlily"
+
+  - id: "nukkitx:surface"
+    ground: "stone"
+    top: "grass"
+    fill: "dirt"
+
+populators:
+    # Clay
+  - id: "nukkitx:ore_submerged"
+    count: 1
+    radius: "2-3"
+    block: "clay"
+    replace: "dirt"
+    start: "water"
+
+    # Trees
+  - id: "nukkitx:tree"
+    chance: 0.0078125 # about 2 per chunk
+    on: "grass,dirt"
+    replace: "air,water"
+    height: "61-255"
+    type: "swamp"
+
+    # Sugar cane
+  - id: "nukkitx:plant"
+    count: 10
+    height: "1-3"
+    block: "reeds"
+    on: "grass"
+    water: "water"
+
+    # Mushrooms
+  - id: "nukkitx:shrub"
+    count: 3
+    on: "grass"
+    block: "2*brown_mushroom,red_mushroom"
+
+    # Blue orchids
+  - id: "nukkitx:shrub"
+    count: 1
+    on: "grass"
+    block: "red_flower#1"
+
+    # Tall grass
+  - id: "nukkitx:scattered_cover"
+    chance: 0.05
+    on: "grass"
+    block: "tallgrass"
