--- a/server/src/main/resources/generator/biome/minecraft/sunflower_plains.yml
+++ b/server/src/main/resources/generator/biome/minecraft/sunflower_plains.yml
@@ -2,11 +2,11 @@ dict: "nukkitx:vanilla"
 parent: "minecraft:plains"
 
 decorators:
-    # Sunflower
-  - id: "nukkitx:double_scattered_cover"
-    chance: 0.0390625 # about 10 per chunk
-    on: "grass"
-    lowBlock: "double_plant#0"
-    highBlock: "double_plant#8"
+#    # Sunflower
+#  - id: "nukkitx:double_scattered_cover"
+#    chance: 0.0390625 # about 10 per chunk
+#    on: "grass"
+#    lowBlock: "double_plant#0"
+#    highBlock: "double_plant#8"
 
   - id: "nukkitx:next"
