--- a/server/src/main/resources/generator/biome/minecraft/jungle.yml
+++ b/server/src/main/resources/generator/biome/minecraft/jungle.yml
@@ -7,4 +7,80 @@ elevationVanilla:
 temperature: 0.95
 rainfall: 0.9
 
-#porktodo: this
+decorators:
+  - id: "nukkitx:surface"
+    ground: "stone"
+    top: "grass"
+    fill: "dirt"
+
+populators:
+    # Trees
+  - id: "nukkitx:tree"
+    chance: 0.015625 # about 4 per chunk
+    height: "62-100"
+    on: "grass"
+    replace: "air"
+    type:
+      species: "jungle"
+      height: "4-12"
+
+    # Cocoa on small jungle trees
+  - id: "nukkitx:cocoa"
+    chance: 0.2 # about one per 5 logs
+    height: "62-100"
+    avoidDouble: true
+    on: "log#3"
+
+    # Melons
+  - id: "nukkitx:shrub"
+    count: 1
+    on: "grass"
+    replace: "air,tallgrass"
+    block: "melon_block"
+
+    # Huge trees
+  - id: "nukkitx:huge_tree"
+    chance: 0.02197265625 # about 5.625 per chunk
+    height: "62-100"
+    on: "grass"
+    replace: "air,leaves#3"
+    below: "grass"
+    type: "jungle"
+
+    # Vines on logs
+  - id: "nukkitx:vines"
+    height: "62-100"
+    chance: 0.75
+    on: "log#3"
+
+    # Bushes
+  - id: "nukkitx:bush"
+    chance: 0.0390625 # about 10 per chunk
+    on: "grass"
+    replace: "air"
+    log: "log#3"
+    leaves: "leaves#3"
+
+    # Flowers
+  - id: "nukkitx:shrub"
+    count: 4
+    on: "grass"
+    replace: "air,tallgrass"
+    block: "2*yellow_flower,red_flower"
+
+    # Flowers
+  - id: "nukkitx:shrub"
+    count: 4
+    on: "grass"
+    replace: "air,tallgrass"
+    block: "2*yellow_flower,red_flower"
+
+    # Tall grass
+  - id: "nukkitx:shrub"
+    count: 25
+    on: "grass"
+    block:
+      - "tallgrass"
+      - "tallgrass"
+      - "tallgrass"
+      - "tallgrass#2" # fern
