--- a/server/src/main/resources/generator/biome/minecraft/desert.yml
+++ b/server/src/main/resources/generator/biome/minecraft/desert.yml
@@ -7,4 +7,32 @@ elevationVanilla:
 temperature: 2.0
 rainfall: 0.0
 
-#porktodo: this
+decorators:
+  - id: "nukkitx:surface_deep"
+    ground: "stone"
+    top: "sand"
+    fill: "sand"
+    deep: "sandstone"
+    deepSize: "1-4"
+
+populators:
+    # Dead bushes
+  - id: "nukkitx:shrub"
+    count: 2
+    on: "sand"
+    block: "deadbush"
+
+    # Cactus
+  - id: "nukkitx:plant"
+    count: 10
+    height: "1-3"
+    block: "cactus"
+    on: "sand"
+
+    # Sugar cane
+  - id: "nukkitx:plant"
+    count: 5
+    height: "1-3"
+    block: "reeds"
+    on: "sand"
+    water: "water"
